[SERVER-2345] dbpath with --fork work not as intended